--- a/css/styles.css
+++ b/css/styles.css
@@ -830,7 +830,8 @@ svg {
 .modal.show {
     opacity: 1;
     background-color: #00bcd4;
-    height: 60%;
+    height: auto;
+	max-height: 80%;
     transform: translate(-50%, -50%) scale(1);
 }
 
