--- a/css/styles.css
+++ b/css/styles.css
@@ -915,3 +915,25 @@ svg {
   .modal .submit:hover {
 	opacity: 0.9
   }
+
+  @keyframes fadeInOut {
+	0% { opacity: 0; }
+	10% { opacity: 1; }
+	90% { opacity: 1; }
+	100% { opacity: 0; }
+  }
+  
+
+  #flexContainer .col-md-12{
+	display: flex;
+	padding: 0 5% 0 5%;
+	justify-content: space-between;
+  }
+  
+  #flexContainer .col-md-12 p {
+	font-size: 12px;
+  }
+  .green-icon {
+    color: white;
+	transform: rotateY(0deg);
+}
